Final Commit Before Demo

--- a/BeezNest/appsettings.Development.json
+++ b/BeezNest/appsettings.Development.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "BeezNest": "Server=SIRRAPH\\SQLEXPRESS;Database=BeezNestDb;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
