Before making javascripts corrections

--- a/BeezNest/appsettings.json
+++ b/BeezNest/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BeezNest": "Server=SIRRAPH\\SQLEXPRESS;Database=NewDbTest;Trusted_Connection=True;TrustServerCertificate=True"
+    "BeezNest": "Server=SIRRAPH\\SQLEXPRESS;Database=DemoDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
